// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correctly with tsconfig (filename) 1`] = `
Object {
  "allowSyntheticDefaultImports": true,
  "declaration": true,
  "module": 1,
  "strict": true,
  "target": 2,
}
`;

exports[`should return correctly with tsconfig (raw-options) 1`] = `
Object {
  "module": 1,
  "strict": true,
  "target": 2,
}
`;

exports[`should throw error if there are some invalid values 1`] = `
"Unexpected error(s) while loading compiler options:

  Argument for '--module' option must be: 'none', 'commonjs', 'amd', 'system', 'umd', 'es6', 'es2015', 'esnext'.
  Argument for '--target' option must be: 'es3', 'es5', 'es6', 'es2015', 'es2016', 'es2017', 'esnext'."
`;
